Updated 2 files via CloudCannon

--- a/material/partials/copyright.html
+++ b/material/partials/copyright.html
@@ -8,9 +8,8 @@
     </div>
   {% endif %}
   {% if not config.extra.generator == false %}
-    Made with
-    <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
-      Material for MkDocs
+    <a href="https://rpa-solutions.io" target="_blank" rel="noopener">
+      RPA Solutions
     </a>
   {% endif %}
 </div>
